NIHVIVO-2890: Made css files (ie6.css and ie7.css) for resolving browser layout issues theme agnostic.

--- a/themes/wilma/css/ie7.css
+++ b/themes/wilma/css/ie7.css
@@ -1,154 +1,8 @@
 /* $This file is distributed under the terms of the license in /doc/license.txt$ */
 
+/* Fix browser issues in IE7 browsers */
+
 /* Fix for homepage */
-#search-field input.search {
-    padding-left: 14px;
-}
 #search-home-field  input.search {
     padding-left: 14px;
-}
-#login-form p.submit {
-    margin-left: 20px;
-}
-/* Fix for site admin */
-/* the wonders of the IE float model...fix to maintain sanity in rendering sections of site admin */
-/* targets IE7 and below */
-#adminDashboard .pageBodyGroup {
-  *float: none !important;
-  *display: inline !important;
-  *vertical-align: top !important;
-}
-/* Fix for dropdown user menu */
-ul.dropdown {
-    z-index: 9999;
-}
-/* Fix for photo upload */
-#photoUploadForm input.submit, 
-#photoUploadForm input.submit:visited,
-#cropImage input.submit,
-#cropImage input.submit:visited {
-    padding: 5px 5px 7px;
-    margin-left: -8px;
-}
-#photoUploadForm span.or,
-#cropImage span.or {
-    display: block;
-    float: left;
-    padding-top: 10px;
-}
-/* Fix position for input type submit buttons */
-input.submit, 
-input.submit:visited,
-input#submit, 
-input#submit:visited {
-    display: block;
-    float: left;
-    margin-left: 0;
-}
-/* Fix for individual pages */
-#individual-intro.person {
-    width: 100%;
-}
-.sparkline_text, 
-.collaboratorship-link-container {
-    width: 148px;
-}
-#individual-intro.person #individual-info {
-    width: 72%;
-}
-#individual-intro .individual-overview {
-    clear: left;
-}
-/* Miscellaneous */
-input#submit, input#submit:visited {
-    margin-left: 0;
-}
-/* Fix for menupages */
-.pagination li {
-    display: block;
-    float: left;
-}
-.pagination h3 {
-    float: left;
-}
-.pagination ul {
-    display: block;
-    float: left;
-}
-#find-by {
-    width: 445px;
-}
-/* Fix for Visualization: Co-author and Co-investigator network pages */
-#sparkline-container {
-    clear: both;
-    float: none;
-    margin-left: 0;
-    width: 100%;
-}
-.easy-deselect-label a.temporal-vis-url {
-    margin-top: -15px;
-}
-#grant-count-sparkline-include {
-    width: 48%;
-}
-#coinvestigator-count-sparkline-include {
-    width: 48%;
-    clear: left;
-}
-#publication-count-sparkline-include {
-    width: 48%;
-}
-#coauthor-count-sparkline-include {
-    width: 48%;
-    clear: left;
-}
-/* Fix for verbose mode */
-#verbose-mode {
-    float: left;
-    clear: left;
-    margin-top: -14px;
-}
-.verbose-toggle {
-    top: 12px;
-}
-#admin .uri-link {
-    padding-top: 5px;
-}
-/* Fix account management pages */
-table#account th {
-    position: relative;
-}
-.account-alpha-browse {
-    position: absolute;
-    float: none;
-    top: 7px;
-    right: 0;
-}
-#filter-roles {
-    clear: both;
-}
-#search-accounts {
-    width: 400px; 
-}
-#search-accounts input[type="text"] {
-    float: left;  
-}
-#search-accounts input[type="submit"] {
-    float: right;
-    margin-top: 0;
-}
-#add-account {
-    width: 500px;
-    margin-bottom: 20px;
-}
-#add-account span {
-    float: left;
-}
-#add-account input.add-account {
-    float: left;
-    margin-top: 0;
-    margin-left: 5px;
-}
-p.requiredHint {
-    clear: left;
 }
